Fixed IE background image alignment for attach, favour and disfavour

--- a/theme/identica/css/ie.css
+++ b/theme/identica/css/ie.css
@@ -7,8 +7,14 @@ color:#FFFFFF;
 background-color:#D9DADB;
 }
 #form_notice .form_note + label {
-background:transparent url(../../base/images/icons/twotone/green/clip-01.gif) no-repeat 0 45%;
+background:transparent url(../../base/images/icons/icons-01.png) no-repeat 0 -328px;
 }
 #form_notice #notice_data-attach {
 filter: alpha(opacity=0);
+}
+.notice-options form.form_favor input.submit {
+background-position:0 -460px;
+}
+.notice-options form.form_disfavor input.submit {
+background-position:0 -526px;
 }
